# spec/api-spec-parking.yaml
@@ -73,20 +73,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ParkingResponse'
 
-  /parking/freeparkings:
-    get:
-      tags:
-        - parking
-      summary: Free parking
-      operationId: parkingFree
-      responses:
-        200:
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ParkingsResponse'
-
 components:
   schemas:
     ParkingObject:
@@ -172,23 +158,15 @@ components:
         parking:
           $ref: '#/components/schemas/ParkingObject'
 
-    ParkingsResponse:
+    PlaceResponse:
       type: object
       properties:
         result:
           $ref: '#/components/schemas/Result'
-        parkings:
-          $ref: '#/components/schemas/ParkingsPlaceObjectList'
+        place:
+          $ref: '#/components/schemas/PlaceObject'
 
-    ParkingsPlaceObjectList:
-      type: object
-      properties:
-        parking:
-          type: array
-          items:
-            $ref: '#/components/schemas/ParkingPlaceObject'
-
-    ParkingPlaceObject:
+    PlaceObject:
       type: object
       properties:
         id:
@@ -203,8 +181,7 @@ components:
     MoneyResponse:
       type: object
       properties:
-        result:
-          $ref: '#/components/schemas/Result'
-        moneyResult:
+        code:
           type: string
-          maxLength: 250
+        message:
+          type: string
